[tool.poetry]
name = "fastapi_slackeventsapi"
version = "0.1.0"
description = "FastAPI Implementation of slackeventsapi"
authors = ["Phygitalism", "und3v3l0p3d <prohibitme@phygitalism.com>", "und3v3l0p3d <prohibitme@ya.ru>"]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE"
]
keywords = ["fastapi", "slack", "slackeventsapi"]
classifiers = [
    'Topic :: Communications :: Chat',
    'Topic :: System :: Networking',
    'Topic :: Office/Business',
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
homepage = "https://github.com/und3v3l0p3d/fastapi_slackeventsapi"
repository = "https://github.com/und3v3l0p3d/fastapi_slackeventsapi"

[tool.poetry.dependencies]
python = ">=3.7,<4"
aiojobs = "^0.3.0"
async-timeout = "^3.0.1"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-asyncio = "^0.14.0"
httpx = "^0.17.1"
coverage = "^5.5"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
